@@ -2,8 +2,9 @@
 
 ## new features
 
-* footnote is now able to add footnotes inline
+* footnote is now able to add inline footnotes
 * support for bookdown references
+* bg and color now accept functions (i.e. `scales::col_numeric()`)
 
 # flextable 0.5.9
 
